namespace KeyFortress.enums;

public enum LoginResponse
{
  newUser,
  wrongPassword,
  ok,
}
