namespace KeyFortress.enums;

public enum SignupResponse
{
  userExists,
  error,
  ok,
}
